--- a/index.html
+++ b/index.html
@@ -1,15 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@4.8.0/fonts/remixicon.css" rel="stylesheet" />
     <title>E-Commerce</title>
 </head>
+
 <body>
-    
+
+    <div class="main">
+        <div class="page1">
+            <div class="nav-bar">
+                <div class="logo">logo</div>
+                <div class="anchors">
+                    <ul>
+                        <li>Home</li>
+                        <li>Shop</li>
+                        <li>About</li>
+                        <li>Contact</li>
+                    </ul>
+                    <div class="input">
+                        <input type="text" placeholder="Search Product">
+                        <div id="search">
+                            <i class="ri-search-line"></i>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="icons">
+                    <div id="account">
+                        <i class="ri-user-line"></i> Account
+                    </div>
+
+                    <div id="cart">
+                        <i class="ri-shopping-cart-2-line"></i> Cart
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
 
 
     <script src="script.js"></script>
 </body>
+
 </html>
