--- a/Login-signUp/login_signUp.html
+++ b/Login-signUp/login_signUp.html
@@ -13,12 +13,44 @@
     <div class="userInfo">
        <div class="login">
         <div class="left">
-            <h2>login</h2>
-            <p>See your growth and get consultant support!</p>
+            <div class="left_content">
 
-            <div class="google_login">
-                <img src="/google-logo-icon-gsuite-hd-701751694791470gzbayltphh-removebg-preview.png" alt="">
-                <h3>sign in with google</h3>
+                <h2>login</h2>
+                <p>See your growth and get consultant support!</p>
+    
+                <div class="google_login">
+                    <img src="/Login-signUp/google-logo-icon-gsuite-hd-701751694791470gzbayltphh-removebg-preview.png" alt="">
+                    <h3>sign in with google</h3>
+                </div>
+    
+                <div class="orSignIn">
+                    <div class="line">
+                        <a href="">Or Sign in with Email</a>
+                    </div>
+                </div>
+
+                <div class="email">
+                    <h2>Email*</h2>
+                    <div class="input">
+                        <input type="text" placeholder="mail@website.com">
+                    </div>
+                </div>
+
+                <div class="pass">
+                    <h2>Password*</h2>
+                    <div class="input">
+                        <input type="text" placeholder="Min. 8 Character">
+                    </div>
+                </div>
+
+                <!-- <div class="remember">
+                    <input type="checkbox"> Remember me 
+                    Forget password?
+                </div>
+
+                <div class="loginBtn">Login</div>
+                <h3>Not registered yet?<span>Create an Account</span></h3> -->
+
             </div>
        </div>
         </div>
