--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <div class="logo">logo</div>
                 <div class="anchors">
                     <ul>
-                        <li>Home</li>
+                        <li>hiiii</li>
                         <li>Shop</li>
                         <li>About</li>
                         <li>Contact</li>
