--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <div class="anchors">
                     <ul>
                         <li>hello</li>
-                        <li>Shop</li>
+                        <li>shfhkdsfhdsf</li>
                         <li>About</li>
                         <li>Contact</li>
                     </ul>
