--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
                 <div class="logo">logo</div>
                 <div class="anchors">
                     <ul>
-                        <li>hello</li>
-                        <li>shfhkdsfhdsf</li>
+                        <li>Home</li>
+                        <li>Shop</li>
                         <li>About</li>
                         <li>Contact</li>
                     </ul>
