LoginPage/Fixing Inputs by Responsive

--- a/Login-signUp/login_signUp.html
+++ b/Login-signUp/login_signUp.html
@@ -46,7 +46,7 @@
 
                 <div class="remember">
                     <div id="remember-check">
-                        <input type="checkbox"> Remember me 
+                        <input type="checkbox" class="fixedCheckbox"> Remember me 
                     </div>
                     Forget password?
                 </div>
