--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     <ul>
                         <li>Home</li>
                         <li>Shop</li>
-                        <li>About</li>
+                        <li>Sale %</li>
                         <li>Contact</li>
                     </ul>
                     <div class="input">
