gurneet-feature organized

--- a/Hero_Section/input.html
+++ b/Hero_Section/input.html
@@ -53,7 +53,7 @@
         <div class="price3">
             
             <div class="pic">
-                <img class=pics src="jbl.jpg">
+                <img class=pics src="img/jbl.jpg">
             </div>
 
             <div class="rate">
