--- a/Main/index.html
+++ b/Main/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="theme.css">
     <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@4.8.0/fonts/remixicon.css" rel="stylesheet" />
     <title>E-Commerce</title>
@@ -32,12 +33,23 @@
 
                 <div class="icons">
                     <div id="account">
-                        <i class="ri-user-line"></i> <a href="/Login-signUp/login_signUp.html">Account</a>
+                        <i class="ri-user-line"></i> <a href="img/Login-signUp/login_signUp.html">Account</a>
                     </div>
 
                     <div id="cart">
                         <i class="ri-shopping-cart-2-line"></i> Cart
                     </div>
+                </div>
+            </div>
+
+            <div class="hero-section">
+                <div class="heading">
+                    <h2>Headphones For You!</h2>
+                </div>
+                <div class="products">
+
+                    <div class="grid"></div>
+
                 </div>
             </div>
         </div>
