Product Section/UI Completed

--- a/Product Section/product.html
+++ b/Product Section/product.html
@@ -63,9 +63,6 @@
                         <img src="/Product Section/img/green.png" alt="">
                     </div>
 
-                    <!-- <img src="/Product Section/img/blue.png" alt="">
-                    <img src="/Product Section/img/green.png" alt="">
-                    <img src="/Product Section/img/pink.png" alt=""> -->
                 </div>
             </div>
             <div class="part2">
@@ -84,7 +81,7 @@
                     <div class="input-section">
                         <div class="inputs">
                             <i class="ri-subtract-line"></i>
-                            <input type="text" placeholder="1">
+                            <div class="no">1</div>
                             <i class="ri-add-line"></i>
                         </div>
 
@@ -99,6 +96,18 @@
                     <div class="addToCartBtn">add to cart</div>
                 </div>
 
+                <div class="delivery-section">
+                    <div class="free">
+                        <h2>Free Delivery</h2>
+                        <p>Enter Your Referral code for Delivery Availability</p>
+                    </div>
+
+                    <div class="return">
+                        <h2>Return Delivery</h2>
+                        <p>Free 30days delivery returns.</p>
+                        
+                    </div>
+                </div>
             </div>
         </div>
 
