SideBar/Completed && Main JS Pending (getBtn Issue)

--- a/Main/index.html
+++ b/Main/index.html
@@ -52,10 +52,48 @@
 
                 </div>
             </div>
+
+            <div class="sideTab">
+                <div class="sideItems">
+                    <div class="top">
+                        <h1>Shopping Cart</h1>
+                        <div class="close">
+                            <i class="ri-close-line"></i>
+                            <h4>close</h4>
+                        </div>
+                    </div>
+
+                    <div class="sideProducts">
+                        <img src="img/jbl.jpg" alt="">
+                        <div class="img-details">lsifjsldgljslidfjlisdfjlsdfisjdlfjidsjfdifjfi</div>
+                        <i class="ri-close-line"></i>
+                    </div>
+
+                    <div class="bottom">
+                        <div class="sub-total">
+                            <h2>Sub-Total</h2>
+                            <p>₹14,985</p>
+                        </div>
+                        <div class="total">
+                            <h2>Total</h2>
+                            <p>₹14,985</p>
+                        </div>
+                        <div class="btns">
+                            <div id="view-cart" class="btn">
+                                <i class="ri-shopping-cart-2-line"></i>
+                                <h2>View Cart</h2>
+                            </div>
+                            <div id="checkout" class="btn">
+                                <i class="ri-reply-fill"></i>
+                                <h2>Checkout</h2>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
         </div>
     </div>
-
-
 
     <script src="script.js"></script>
 </body>
