JS Added for SideTab

--- a/Main/index.html
+++ b/Main/index.html
@@ -64,9 +64,16 @@
                     </div>
 
                     <div class="sideProducts">
-                        <img src="img/jbl.jpg" alt="">
-                        <div class="img-details">lsifjsldgljslidfjlisdfjlsdfisjdlfjidsjfdifjfi</div>
-                        <i class="ri-close-line"></i>
+                        <div class="products">
+                            <img src="img/jbl.jpg" alt="" class="cartImg">
+                            <div class="img-details">lsifjsldgljslidfjlisdfjlsdfisjdlfjidsjfdifjfi</div>
+                            <i class="ri-close-line"></i>
+                        </div>
+                        <div class="products">
+                            <img src="img/jbl.jpg" alt="" class="cartImg">
+                            <div class="img-details">lsifjsldgljslidfjlisdfjlsdfisjdlfjidsjfdifjfi</div>
+                            <i class="ri-close-line"></i>
+                        </div>
                     </div>
 
                     <div class="bottom">
@@ -94,6 +101,11 @@
             </div>
         </div>
     </div>
+
+    <!-- GSAP CDN -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.13.0/gsap.min.js"
+        integrity="sha512-NcZdtrT77bJr4STcmsGAESr06BYGE8woZdSdEgqnpyqac7sugNO+Tr4bGwGF3MsnEkGKhU2KL2xh6Ec+BqsaHA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
     <script src="script.js"></script>
 </body>
