Added Functionality Add to Cart

--- a/Main/index.html
+++ b/Main/index.html
@@ -64,22 +64,13 @@
                     </div>
 
                     <div class="sideProducts">
-                        <div class="products">
-                            <img src="img/jbl.jpg" alt="" class="cartImg">
-                            <div class="img-details">lsifjsldgljslidfjlisdfjlsdfisjdlfjidsjfdifjfi</div>
-                            <i class="ri-close-line"></i>
-                        </div>
-                        <div class="products">
-                            <img src="img/jbl.jpg" alt="" class="cartImg">
-                            <div class="img-details">lsifjsldgljslidfjlisdfjlsdfisjdlfjidsjfdifjfi</div>
-                            <i class="ri-close-line"></i>
-                        </div>
+                        <!-- Elements Comes from JS -->
                     </div>
 
                     <div class="bottom">
                         <div class="sub-total">
                             <h2>Sub-Total</h2>
-                            <p>₹14,985</p>
+                            <p>14,985</p>
                         </div>
                         <div class="total">
                             <h2>Total</h2>
